kubernetes/apps/network/cloudflare-tunnel/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflare-tunnel
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflare-tunnel
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare-tunnel-external
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflare-tunnel
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchName: envoy-external.network.svc.cluster.local
              - matchName: region1.v2.argotunnel.com
              - matchName: region2.v2.argotunnel.com
              - matchName: _v2-origintunneld._tcp.argotunnel.com
              - matchName: cfd-features.argotunnel.com
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchName: envoy-external.network.svc.cluster.local
              - matchName: region1.v2.argotunnel.com
              - matchName: region2.v2.argotunnel.com
              - matchName: _v2-origintunneld._tcp.argotunnel.com
              - matchName: cfd-features.argotunnel.com
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "7844"
              protocol: UDP
            - port: "7844"
              protocol: TCP
